layanan/assets/css/style-new-dentist.css
/* ... */
.step-one,
.step-two,
.step-three {
  margin-top: 5em;
  position: relative;
}

.step-one img {
  width: 520px;
  /* border: 1px solid red; */
  outline: 0;
  
}

.step-one small {
  color: #0c337b;
  font-family: "poppins";
  letter-spacing: 2px;
  text-align: center;
  display: block;
  margin-top: 5em;
}

.slick-slide img:focus {
  outline: none;
}

.template-slide {
  margin: 3em 0;
}

.slick-prev {
  z-index: 5;
  left: 10vw !important;
  top: 50% !important;
  height: 100% !important;
  width: 250px !important;
  left: 0 !important;
}

.slick-next {
  z-index: 5;
  right: 10vw !important;
  top: 50% !important;
  height: 100% !important;
  width: 250px !important;
  right: 0px !important;
}

.slick-prev:before,
.slick-next:before {
  height: 200px;
  font-size: 70px !important;
  color: #ffcc17 !important;
  line-height: 1;
  text-shadow: 1px 1px 7px rgba(150, 150, 150, 1);
}

.slick-initialized .slick-slide {
  margin-left: -80px;
}

.slick-slide:not(.slick-center) {
  z-index: 0;
  transform: scale(0.8);

}

.slick-active.slick-center + .slick-slide + .slick-slide {
  z-index: 1;
}
.slick-active.slick-center + .slick-slide,
.slick-center + .slick-cloned {
  z-index: 2;
}
.slick-center {
  z-index: 3;
}
.slick-center img{
  -webkit-box-shadow: 0px 0px 49px -9px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 0px 49px -9px rgba(0,0,0,0.75);
  box-shadow: 0px 0px 49px -9px rgba(0,0,0,0.75);
}
.slick-slide {
  position: relative;
  transition: transform 150ms;
  height: auto !important;
}

div.slick-list.draggable{
  padding: 4em 0 !important;
}

.black-bg {
  background: black;
}


.step-description {
  position: relative;
  width: 45%;
  margin: 0 auto;
  z-index: 1;
}
.step-description h5 {
  font-family: "dmserif";
  font-size: 30px;
  color: #0c337b;
  letter-spacing: 4px;
  position: relative;
}

.step-description p {
  font-family: "poppins";
  font-weight: lighter;
  color: #0c337b;
  font-size: 20px;
  letter-spacing: 1.5px;
  position: relative;
  margin-bottom: 1em;
}

.step-description small {
  font-size: 1em;
  font-weight: 600;
  font-family: "poppins";
  letter-spacing: 2.5px;
  color: #0c337b;
  text-align: left;
}

.step-description ul li {
  list-style: disc;
  margin-left: 1.5em;
}

.modal {
  display: none;
  position: fixed;
  z-index: 9999999999999;
  padding-top: 80px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0, 0, 0, 0.8);
}

.modal-content {
  background: none !important;
  position: relative;
  margin: auto;
  padding: 0;
  width: 82%;
  max-width: 1200px;
  margin-bottom: 2em;
  animation-name: zoom;
  animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
  from {
    -webkit-transform: scale(1);
  }
  to {
    -webkit-transform: scale(2);
  }
}

@keyframes zoom {
  from {
    transform: scale(0.4);
  }
  to {
    transform: scale(1);
  }
}

.modal-content #slides img {
  width: 100%;
}

.modal .close-btn {
  color: white;
  position: fixed;
  top: 10px;
  right: 3%;
  font-size: 35px;
  font-weight: bold;
}

.modal .close-btn:hover,
.modal .close-btn:focus {
  color: #999;
  text-decoration: none;
  cursor: pointer;
}

.step-three li{
  padding: 0.2em 0;
}

.plans .table-1{
  padding-left: 0 !important;
}

.plans .table-2{
  padding-right:0 !important;
}

.plans h5 {
  font-family: "dmserif";
  font-size: 30px;
  color: #0c337b;
  letter-spacing: 4px;
  position: relative;
  text-align: center;
}

.plans table {
  margin: 0 auto;
  font-size: 16px;
  letter-spacing: 1.5px;
  width: 100%;
}

.plans th {
  font-family: "poppins";
  color: #0c337b;
}
.plans td {
  font-family: "poppins";
  color: #0c337b;
  padding: 0.7em 0;
}

.plans table tbody tr:nth-child(1),
.plans table tbody tr:nth-child(2),
.plans table tbody tr:nth-child(5),
.plans table tbody tr:nth-child(9) {
  border-bottom: 1px solid #0c337b;
}

.plans table tbody tr:nth-child(3) th,
.plans table tbody tr:nth-child(7) th {
  padding-top: 1.5em;
}

.plans table tbody tr:last-child {
  background: rgba(255, 202, 19, 0.4);
  color: #0c337b;
  font-weight: 600;
}

.plan-item {
  padding: 1em;
  width: 100%;
  margin: 3em 0;
  -webkit-box-shadow: 0px 0px 5px -2px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 0px 5px -2px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 0px 5px -2px rgba(0, 0, 0, 0.75);
}


.marketing-fee {
  text-align: center;
  padding: 1em;
  font-family: "poppins";
  letter-spacing: 2.7px;
  color: white;
  background: #0c337b;
  font-size: 16px;
  border-radius: 5px;
  /* width: 75%; */
}

.message-form {
  background: url("../img/img-new-dentist/group_18.png");
  background-size: cover;
  margin-top: 2em;
  overflow: hidden;
}

.message-form h5 {
  color: #0c337b;
  font-family: "dmserif";
  letter-spacing: 2px;
  font-size: 30px;
  text-align: center;
  padding: 2em 0 1em;
  width: 30%;
  margin: 2em auto 0;
}

.message-alert{
  width: 60%;
  margin: 1em auto 3em;
  
}

.message-form .row {
  position: relative;
}

.contact-info-mobile{
  margin-bottom: 1em;
  display: none;
  justify-content: center
}

.contact-info-mobile a{
  color: #0c337b;
  padding: 0.5em;
  margin-left: 0.2em;
  font-size: 2.1em;

}

.img-form-left {
  width: 300px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.img-form-right {
  width: 350px;
  position: absolute;
  bottom: 0;
  right: 20px;
}

.label-item {
  text-align: left;
  color: #0c337b;
  font-family: "poppins";
  font-weight: 600;
  letter-spacing: 2.6px;
}

.form-item {
  width: 100%;
  padding: 0.3em 1em;
  max-width: 450px;
  border: none;
  border-bottom: 1px solid #0c337b;
  background: none;
  font-family: "poppins";
  letter-spacing: 1.7px;
  font-style: italic;
}

.form-item::placeholder {
  color: #d3d3d3;
}

.mb-3 {
  margin-bottom: 3em;
}

textarea.form-item {
  resize: none;
}

@media (max-width: 767px) {
  .content-area {
    margin-left: 0px;
  }
}
/* ... */

